# swagreet

./: Cargo.toml  README.md  config.example.toml
assets/: layout.ui  style.css
src/: main.rs
src/greetd/: ipc.rs  login_command.rs  mod.rs
src/model/: model.rs
src/ui/: ui.rs
src/widgets/: widgets.rs
