[package]
name = "swagreet"
version = "0.1.0"
edition = "2024"

[dependencies]
cairo-rs = { version = "0.21.2", features = ["png"] }
getopts = "0.2.24"
gio = "0.21.2"
greetd_ipc = { version = "0.10.3", features = ["tokio-codec"] }
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
relm4 = { version = "0.10.0" }
serde = { version = "1.0.226", features = ["derive"] }
tokio = { version = "1.47.1", features = ["net"] }
toml = { version = "0.9.7", features = ["serde"] }
